@@ -177,7 +177,7 @@ Activando el maximo turbo permitido, tambien hace una franja negra en el border,
 
 -poder cambiar instrumento midi en output a .mid
 
--proteger previews de pzx, trd, tap para archivos random
+-proteger previews de pzx, trd para archivos random
 
 -Modo 50Hz o 60Hz para Master system?
 
