@@ -3,6 +3,8 @@ Version 9.3 - xxxx edition. 21 April 2021
 Added Sega Master System emulation
 Added .sms file viewer
 
+Fixed .tap file previews when corrupted file
+
 Version 9.2 - Cliff Hanger edition. 05 April 2021
 
 Added SamRam Gerton Lunter interface emulation
